--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 
+{% block title %} Home {% endblock %}
 {% block content %}
-    <div id="loader" class="center"></div>
     {% include 'components/form.html' %}
-
-
 {% endblock %}
