--- a/templates/components/form.html
+++ b/templates/components/form.html
@@ -1,4 +1,3 @@
-
 <div class="app min-h-screen min-v-screen p-8 bg-grey-lightest font-sans">
     <div class="row sm:flex">
         <div class="col sm:w-1/2">
@@ -31,11 +30,13 @@
                 </textarea>
             </div>
             <div class="text-center p-5">
-                <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="disable_button()"
+                <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                        onclick="copy_all()"
                         type="button" id="copy-button">
                     Copy
                 </button>
-                <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="disable_button()"
+                <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                        onclick="clear_all()"
                         id="clear-button" type="button">
                     Clear
                 </button>
@@ -43,14 +44,5 @@
         </div>
     </div>
 </div>
-
-
-{#<h1>GeeksforGeeks</h1>#}
-{#<h2>A computer science portal for geeks</h2>#}
-{#<img src="https://i.imgur.com/KsQJA8I.png"#}
-{#     alt="GeeksforGeeks logo"/>#}
-{#<script>#}
-{#    #}
-{#</script>#}
 
 
