--- a/templates/css/css.html
+++ b/templates/css/css.html
@@ -1,3 +1,5 @@
 <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
 <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+
+<link rel="icon" href="{{ url_for('static', filename='favicon/favicon.png') }}" type="image/x-icon"/>
