--- a/templates/components/form.html
+++ b/templates/components/form.html
@@ -15,7 +15,7 @@
                     <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
                             id="submit-button"
                             type="submit">
-                        Summarize
+                        Summarize <i class="fas fa-compress"></i>
                     </button>
                 </div>
             </form>
@@ -33,16 +33,14 @@
                 <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
                         onclick="copy_all()"
                         type="button" id="copy-button">
-                    Copy
+                    Copy <i class="fas fa-copy"></i>
                 </button>
                 <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
                         onclick="clear_all()"
                         id="clear-button" type="button">
-                    Clear
+                    Clear <i class="fas fa-eraser"></i>
                 </button>
             </div>
         </div>
     </div>
 </div>
-
-
