Updated: formatted html files

--- a/src/templates/components/footer.html
+++ b/src/templates/components/footer.html
@@ -1,11 +1,9 @@
 <div class="bg-gray-900">
-    <footer class="flex flex-wrap items-center justify-between p-3 m-auto">
-        <div class="container mx-auto flex flex-col flex-wrap items-center justify-between">
-            <br>
-            <div class="flex mx-auto text-white text-center">
-                Summarizer © 2021
-            </div>
-            <br>
-        </div>
-    </footer>
+  <footer class="flex flex-wrap items-center justify-between p-3 m-auto">
+    <div class="container mx-auto flex flex-col flex-wrap items-center justify-between">
+      <br>
+      <div class="flex mx-auto text-white text-center">Summarizer © 2021</div>
+      <br>
+    </div>
+  </footer>
 </div>
