--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -1,14 +1,14 @@
-<nav
-    class="font-sans flex flex-col text-center sm:flex-row sm:text-left sm:justify-between py-4 px-6 bg-gray-800 text-white shadow sm:items-baseline w-full">
-    <div class="mb-2 sm:mb-0">
-        <a href="/" class="text-2xl no-underline text-grey-darkest hover:text-blue-dark">Summarizer</a>
-    </div>
-    <div>
-        <a href="http://arvind11.ml/"  target="_blank" class="text-lg no-underline text-grey-darkest hover:text-blue-dark ml-2">
-            About
-        </a>
-        <a href="https://github.com/Arvind-4/Summarizer" target="_blank" class="text-lg no-underline text-grey-darkest hover:text-blue-dark ml-2">
-            Git Repo
-        </a>
-    </div>
+<nav class="font-sans flex flex-col text-center sm:flex-row sm:text-left sm:justify-between py-4 px-6 bg-gray-800 text-white shadow sm:items-baseline w-full">
+  <div class="mb-2 sm:mb-0">
+    <a href="/"
+       class="text-2xl no-underline text-grey-darkest hover:text-blue-dark">Summarizer</a>
+  </div>
+  <div>
+    <a href="https://arvind11.vercel.app"
+       target="_blank"
+       class="text-lg no-underline text-grey-darkest hover:text-blue-dark ml-2">About</a>
+    <a href="https://github.com/Arvind-4/Summarizer"
+       target="_blank"
+       class="text-lg no-underline text-grey-darkest hover:text-blue-dark ml-2">Git Repo</a>
+  </div>
 </nav>
