--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summarizer | {% block title %} {% endblock %}</title>
+    <title>Summarizer |
+      {% block title %}{% endblock %}
+    </title>
     {% include 'css/css.html' %}
-</head>
-
-<body>
-{% include 'components/navbar.html' %}
-{% include 'components/alert.html' %}
-{% block content %}
-
-{% endblock %}
-
-{% include 'components/footer.html' %}
-</body>
-
-{% include 'js/js.html' %}
-
+  </head>
+  <body>
+    {% include 'components/navbar.html' %}
+    {% include 'components/alert.html' %}
+    {% block content %}{% endblock %}
+    {% include 'components/footer.html' %}
+  </body>
+  {% include 'js/js.html' %}
 </html>
-
-
